<resources>

    <string name="app_name">ScribblePad</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Scrrible Pad</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="gray">gray</string>
    <string name="black">black</string>
    <string name="yellow">yellow</string>
    <string name="thick">size</string>
    <string name="size">5</string>
    <string name="eraser">eraser</string>

</resources>